--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
+            "MyApp\\": "src/"
+            "Standard\\": "Standard/"
         },
         "classmap": [
             "database/seeds",
